# spncci

./: .ccls  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Config.cmake.in  Doxyfile  INSTALL.md  LICENSE.md  README.md  cmake_install.txt  config_gcc4.mk  config_generic-gcc4.mk  install.txt  install_NDCRC.txt  makefile  project.mk  qsubprofile.cache.csh  spncci_shopping_list.cmake  style.txt
libraries/lgi/: CMakeLists.txt  dimensions.cpp  dimensions_test.cpp  generate_lgi_expansions.cpp  generate_lgi_seeds.cpp  get_lgi_expansion.cpp  lgi.cpp  lgi.h  lgi_gen.cpp  lgi_gen.h  lgi_restructure_seeds.cpp  lgi_solver.cpp  lgi_solver.h  lgi_test.cpp  lgi_unit_tensors.cpp  lgi_unit_tensors.h  module.mk  null_solver.cpp  null_solver.h  null_solver_test.cpp  print_seeds.cpp  recurrence_indexing_test.cpp  recurrence_indexing_test_simple.cpp  recurrence_lgi.h  spncci_seeds.cpp  spncci_seeds.h  spncci_seeds_test.cpp  su3rme.cpp
libraries/lsu3shell/: CMakeLists.txt  lsu3shell_basis.cpp  lsu3shell_basis.h  lsu3shell_basis_test.cpp  lsu3shell_interface.cpp  lsu3shell_interface.h  lsu3shell_operator.cpp  lsu3shell_operator.h  lsu3shell_rme.cpp  lsu3shell_rme.h  lsu3shell_rme_test.cpp  module.mk  su3rme.cpp  su3rme.h
libraries/moshinsky/: CMakeLists.txt  module.mk  moshinsky.cpp  moshinsky.h  moshinsky_coefficient_test.cpp  moshinsky_test_xform.cpp  moshinsky_unitarity  moshinsky_unitarity.cpp  moshinsky_xform.cpp  moshinsky_xform.h  moshinsky_xform_test.cpp  relative_cm_test.cpp  relative_cm_xform.cpp  relative_cm_xform.h  relative_cm_xform_test.cpp  relative_to_twobody.cpp  shell_comparison.cpp
libraries/seeds/: CMakeLists.txt  recurrence_seeds.cpp  recurrence_seeds.h  recurrence_seeds_test.cpp
libraries/sp3rlib/: CMakeLists.txt  andika_tests.cpp  lsushell_wru3.cpp  lsushell_wru3.h  module.mk  moshinsky.cpp  moshinsky.h  moshinsky_test.cpp  multiplicity_tagged.h  scratch.cpp  sp3r.cpp  sp3r.h  sp3r_gtest.cpp  sp3r_operator.cpp  sp3r_operator.h  sp3r_operator_test.cpp  sp3r_test.cpp  sp3rcoef.cpp  sp3rcoef.h  su3_coupler.cpp  su3coupling_gtest.cpp  u3.cpp  u3.h  u3_test.cpp  u3boson.cpp  u3boson.h  u3boson_gtest.cpp  u3boson_test.cpp  u3coef.cpp  u3coef.h  u3coef_SU3lib.cpp  u3coef_ndsu3lib.cpp  u3coef_su3lib.cpp  u3coef_su3wrc.cpp  u3coef_test.cpp  u3s.cpp  u3s.h  u3st.cpp  u3st.h  un.cpp  (+6 more)
libraries/spncci/: CMakeLists.txt  branching.cpp  branching.h  branching2.cpp  branching2.h  branching2_test.cpp  branching_u3lsj.cpp  branching_u3lsj.h  branching_u3s.cpp  branching_u3s.h  branching_u3s_test.cpp  coef_cache.cpp  coef_cache.h  coef_cache_test.cpp  computation_control.cpp  computation_control.h  decomposition.cpp  decomposition.h  eigenproblem.cpp  eigenproblem.h  explicit_basis_construction.cpp  explicit_construction.cpp  explicit_construction.h  generate_lgi_unit_tensors.cpp  hyperblocks_u3s.cpp  hyperblocks_u3s.h  io_control.cpp  io_control.h  lgi_unit_tensor.cpp  lgi_unit_tensor.h  lgi_unit_tensor_test.cpp  module.mk  parameters.cpp  parameters.h  recurrence.cpp  recurrence.h  recurrence_indexing.cpp  recurrence_indexing.h  recurrence_indexing_spatial.cpp  recurrence_indexing_spatial.h  (+42 more)
libraries/spncci_basis/: CMakeLists.txt  recurrence_indexing.h  recurrence_indexing_branching.h  recurrence_indexing_operator.cpp  recurrence_indexing_operator.h  recurrence_indexing_operator_test.cpp  recurrence_indexing_spatial.cpp  recurrence_indexing_spatial.h  recurrence_indexing_spin.h
libraries/u3ncsm/: CMakeLists.txt  dimensions.cpp  dimensions.h  dimensions_test.cpp  lgi_gen.cpp  lgi_gen.h  modified_branching_test.cpp  print_lsu3shell_basis.cpp  seed_gen.cpp  seed_gen.h  su3rme.cpp  su3rme.h  u3ncsm_interface.cpp  u3ncsm_interface.h
libraries/u3shell/: CMakeLists.txt  branching.cpp  generate_unit_tensors_tb.cpp  import_interaction.cpp  import_interaction.h  indexing_u3st.cpp  indexing_u3st.h  indexing_u3st_test.cpp  interaction_test.cpp  interaction_truncation.cpp  interaction_truncation.h  interaction_truncation_test.cpp  module.mk  moshinsky.cpp  moshinsky.h  moshinsky_coefficient_test.cpp  moshinsky_test.cpp  moshinsky_unitarity.cpp  operator_indexing_lsjt.cpp  operator_indexing_lsjt.h  operator_indexing_sectors.h  operator_indexing_spatial.cpp  operator_indexing_spatial.h  operator_indexing_spin.cpp  operator_indexing_spin.h  operator_indexing_spin_scratch.h  operator_indexing_test.cpp  operator_parameters.cpp  operator_parameters.h  relative_branching.cpp  relative_branching.h  relative_branching_test.cpp  relative_cm_test.cpp  relative_operator.cpp  relative_operator.h  relative_operator_test.cpp  relative_to_twobody.cpp  relative_upcoupling.cpp  relative_upcoupling.h  relative_upcoupling_test.cpp  (+34 more)
libraries/utilities/: CMakeLists.txt  indexing-example.txt  indexing_base.h  module.mk  multiplicity_tagged.h  nuclide.h  null_solver.cpp  null_solver.h  parsing.cpp  pn2rel.cpp  pn_io.cpp  pn_io.h  utilities.h
programs/lgi/: Brel_subspace_lister.cpp  CMakeLists.txt  generate_lgi_expansion_lsu3shell.cpp  get_cmf_lgi_labels.cpp  get_lgi_expansion.cpp  get_spncci_seed_blocks.cpp  get_u3s_subspaces.cpp  get_u3s_subspaces_su3pn.cpp  module.mk  su3rme_test.cpp  transform_seed_blocks.cpp  u3s_to_sp3rs_basis.cpp
programs/linear_algebra/: CMakeLists.txt  module.mk  scalapack_test.cpp  scalapack_test.in  spectra_dense_timing.cpp  spectra_example_symm.cpp
programs/operators/: .__afsABBC  CMakeLists.txt  analyse_Nrel.py  analyse_lammu.py  analyse_u3st.py  compare_precision.py  compare_threshold.py  generate_relative_u3st_operators  generate_relative_u3st_operators.cpp  lambdagroup.py  module.mk  mugroup.py  test_operator_symmetries.cpp  truncate_interaction  truncate_interaction.cpp  truncation.py  untruncated.py
programs/rotor/: CMakeLists.txt  module.mk  sp3r_rotor.cpp  transitions.cpp  triaxial_rotor.cpp
programs/spncci/: CMakeLists.txt  Nintr.load  compute_qinvariants.cpp  generate_seeds_lsu3shell.cpp  get_spncci_dimensions.cpp  hamiltonian.load  make_6j_table_q3.cpp  module.mk  r2intr.load  rme2txt.cpp  spncci.cpp  spncci_MPI.cpp  spncci_variance.cpp
(+215 files in other folders)
